web-front/rules/examples/fixtures/ci-scan-project/src/views/fail/MultipleInOne.vue
<template>
  <el-button />
  <el-table :data="[]" />
</template>

<script setup lang="ts"></script>
